# Mini-Todo-Front

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: apk.yml
src/: main.py  task.py  todo.py
